securing apis, start with unit tests
