# src/types/authentication.ts
@@ -2,6 +2,7 @@
 export interface SignUp {
   preferred_username: string,
   password: string,
+  accepted_legal_version: string,
   given_name: string,
   family_name: string
 }
